# cockpit-pacman

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  eslint.config.js  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vitest.config.ts
.github/: dependabot.yml
.github/workflows/: ci.yml
backend/: Cargo.toml
backend/.cargo/: config.toml
backend/crates/arch-mirror-client/: Cargo.toml
backend/crates/arch-mirror-client/src/: lib.rs
backend/crates/arch-security-client/: Cargo.toml
backend/crates/arch-security-client/src/: lib.rs  models.rs
backend/crates/archweb-client/: Cargo.toml
backend/crates/archweb-client/src/: lib.rs  models.rs
backend/src/: config.rs  db.rs  errors.rs  inhibit.rs  lib.rs  main.rs  models.rs  tests.rs  util.rs  validation.rs
backend/src/alpm/: callbacks.rs  mod.rs  transaction.rs
backend/src/handlers/: archive.rs  cache.rs  config.rs  dependency.rs  downgrade.rs  keyring.rs  lock.rs  log.rs  mirrors.rs  mod.rs  mutation.rs  news.rs  pacnew.rs  query.rs  reboot.rs  repos.rs  scheduled.rs  security.rs  services.rs  signoff.rs
backend/tests/: contract_tests.rs  downgrade_tests.rs  repos_tests.rs
docs/: configuration.md  signoffs.md
e2e/: auth.setup.ts  fixtures.ts  installed.spec.ts  keyring.spec.ts  orphans.spec.ts  search.spec.ts  updates.spec.ts
packaging/arch/: PKGBUILD.in  cockpit-pacman.install
src/: api.test.ts  api.ts  cockpit.d.ts  constants.ts  index.html  index.tsx  keyring.ts  manifest.json  offline.test.ts  offline.ts  severity.ts  timeFormat.test.ts  timeFormat.ts  utils.test.ts  utils.ts
src/bindings/: index.ts
src/components/: App.tsx  CacheView.test.tsx  CacheView.tsx  CompactPagination.tsx  DependencyView.test.tsx  DependencyView.tsx  DowngradeModal.test.tsx  DowngradeModal.tsx  ErrorAlert.test.tsx  ErrorAlert.tsx  ErrorBoundary.test.tsx  ErrorBoundary.tsx  (+34 more)
systemd/: cockpit-pacman-scheduled.service  cockpit-pacman-scheduled.timer
(+47 files in other folders)
