[package]
name = "cockpit-pacman-backend"
version = "0.2.0"
edition = "2024"

[features]
integration-tests = []

[dependencies]
alpm = "5"
alpm-utils = "5"
pacmanconf = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
ctrlc = "3"
chrono = "0.4"
fs2 = "0.4"
pacman-key = "0.1.2"
pacman-log = "0.1.0"
tokio = { version = "1", features = ["rt-multi-thread"] }
rss = "2"
ureq = "3"

[profile.release]
lto = true
strip = true
