[package]
name = "cockpit-pacman-backend"
version = "0.3.5"
edition = "2024"

[features]
integration-tests = []

[dependencies]
alpm = "5"
alpm-utils = "5"
pacmanconf = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
ctrlc = "3"
chrono = "0.4"
fs2 = "0.4"
pacman-key = "0.1.2"
pacman-log = "0.1.0"
tokio = { version = "1", features = ["rt-multi-thread"] }
rss = "2"
ureq = "3"
arch-security-client = { path = "crates/arch-security-client" }
archweb-client = { path = "crates/archweb-client" }
base64 = "0.22"
zbus = "5"

[profile.release]
lto = true
strip = true
