[package]
name = "cockpit-pacman-backend"
version = "0.3.5"
edition = "2024"

[features]
integration-tests = []

[dependencies]
alpm = "5"
alpm-utils = "5"
pacmanconf = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
ctrlc = { version = "3", features = ["termination"] }
chrono = "0.4"
libc = "0.2"
pacman-key = "0.2.0"
pacman-log = "0.2.1"
tokio = { version = "1", features = ["rt-multi-thread"] }
rss = "2"
html2text = "0.17"
ureq = "3"
percent-encoding = "2"
arch-security-client = { path = "crates/arch-security-client" }
archweb-client = { path = "crates/archweb-client" }
arch-mirror-client = { path = "crates/arch-mirror-client" }
base64 = "0.22"
zbus = "5"
ts-rs = "12.0.1"

[profile.release]
lto = true
strip = true
